--- a/Programme/Programme/Programme.vcxproj
+++ b/Programme/Programme/Programme.vcxproj
@@ -65,6 +65,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Network.cpp" />
     <ClCompile Include="Neuron.cpp" />
+    <ClCompile Include="TrainingMethod_Gradient.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Connection.h" />
@@ -72,7 +73,9 @@
     <ClInclude Include="Neuron.h" />
     <ClInclude Include="Training.h" />
     <ClInclude Include="TrainingMethod.h" />
-    <ClInclude Include="TrainingMethodGradient.h" />
+    <ClInclude Include="TrainingMethod_Gradient.h" />
+    <ClInclude Include="TransfertFunction.h" />
+    <ClInclude Include="TransfertFunction_Tan.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
