--- a/Programme/Programme/Programme.vcxproj.filters
+++ b/Programme/Programme/Programme.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Network.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TrainingMethod_Gradient.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Neuron.h">
@@ -38,10 +41,16 @@
     <ClInclude Include="TrainingMethod.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="TrainingMethodGradient.h">
+    <ClInclude Include="Connection.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Connection.h">
+    <ClInclude Include="TransfertFunction.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TransfertFunction_Tan.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TrainingMethod_Gradient.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
