--- a/Programme/Programme/Programme.vcxproj
+++ b/Programme/Programme/Programme.vcxproj
@@ -11,7 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{EBB34C13-70D1-43B8-A1F0-2F4F9B194732}</ProjectGuid>
+    <ProjectGuid>{8EB03095-6227-448F-AE21-FAEA41566965}</ProjectGuid>
     <RootNamespace>Programme</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -70,7 +70,7 @@
     <ClInclude Include="TransfertFunction.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="Network.cpp" />
     <ClCompile Include="Neuron.cpp" />
   </ItemGroup>
